--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@paypal/react-paypal-js": "^8.9.2",
+    "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.13.2"
   }
 }
